feat: add models, context e services

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ConexaoPadrao": "Server=localhost\\hiper; Initial Catalog=Api; Integrated Security=True; TrustServerCertificate=True"
   }
 }
