feat: implementa modelos e conexões com banco de dados

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "Server=localhost\\hiper; Initial Catalog=Api; Integrated Security=True; TrustServerCertificate=True"
+    "ConexaoPadrao": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DesafioApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
