feat: add deploy settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "victorws123hotmail.onmicrosoft.com",
+    "TenantId": "52f4d17d-81bd-4bfc-876d-87db78a4ef15",
+    "ClientId": "dd5ec572-f19c-4326-8ece-6ffaec90aa54",
+    "CallbackPath": "/signin-oidc",
+    "Scopes": ""
+  }
 }
