--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "victorws123hotmail.onmicrosoft.com",
-    "TenantId": "52f4d17d-81bd-4bfc-876d-87db78a4ef15",
-    "ClientId": "4419d1e8-6b86-4a08-865f-0737e902a62c",
-    "CallbackPath": "/signin-oidc",
-    "Scopes": ""
-  }
+  "AllowedHosts": "*"
 }
