--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DesafioApi;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "ConexaoPadrao": "Server=tcp:api-ibge.database.windows.net,1433;Initial Catalog=ibge;Persist Security Info=False;User ID=grupoapi;Password=7dxcK<6e11Nn;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
