config: remove o appsettings development

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": ""
+    "ConexaoPadrao": "Server=tcp:api-ibge.database.windows.net,1433;Initial Catalog=ibge;Persist Security Info=False;User ID=grupoapi;Password=7dxcK<6e11Nn;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
