--- a/.gitignore
+++ b/.gitignore
@@ -475,5 +475,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-*appsettings.json
-*appsettings.Development.json
+appsettings.json
+appsettings.Development.json
